@@ -170,6 +170,7 @@ fixed bugs:
 - fixed bug while changing the objective value of an original value after transforming the problem
 - fixed bug with sorting of propagators in presolving: the order can be changed by calling probing; thus, there is a copy of the
   propagators, which is sorted by presolving priority
+- avoid numerically unstable (multi-)aggregations
 
 misc:
 - dropped support for Ipopt < 3.11
